[gd_scene load_steps=6 format=3 uid="uid://d0qea0fj6e4no"]

[ext_resource type="Script" path="res://HUD/ui.gd" id="1_k6682"]
[ext_resource type="FontFile" uid="uid://nyuubhk4t2d" path="res://fonts/DMSans-Medium.ttf" id="2_uo0s0"]
[ext_resource type="FontFile" uid="uid://nri80lxobelw" path="res://fonts/DMSans-Regular.ttf" id="3_528dp"]

[sub_resource type="InputEventAction" id="InputEventAction_p3e7u"]
action = &"start_game"

[sub_resource type="Shortcut" id="Shortcut_62hax"]
events = [SubResource("InputEventAction_p3e7u")]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_k6682")
metadata/_edit_horizontal_guides_ = [77.0, 46.0]

[node name="ScoreNum" type="Label" parent="."]
offset_right = 166.0
offset_bottom = 59.0
theme_override_colors/font_color = Color(0.835294, 0.917647, 0.231373, 1)
theme_override_fonts/font = ExtResource("2_uo0s0")
theme_override_font_sizes/font_size = 45
text = "0"
horizontal_alignment = 1
vertical_alignment = 2

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 1.0
offset_top = 54.0
offset_right = 167.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("3_528dp")
theme_override_font_sizes/font_size = 23
text = "Punktid"
horizontal_alignment = 1

[node name="Message" type="Label" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -240.0
offset_top = -79.5
offset_right = 240.0
offset_bottom = 79.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0.980392, 0.313726, 0.313726, 1)
theme_override_fonts/font = ExtResource("2_uo0s0")
theme_override_font_sizes/font_size = 64
text = "PÃµgene toivode eest!"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 2

[node name="StartButton" type="Button" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -140.0
offset_right = 100.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.835294, 0.917647, 0.231373, 1)
theme_override_fonts/font = ExtResource("2_uo0s0")
theme_override_font_sizes/font_size = 64
shortcut = SubResource("Shortcut_62hax")
text = "Alusta"

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LivesNum" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -136.0
offset_bottom = 59.0
grow_horizontal = 0
theme_override_colors/font_color = Color(0.835294, 0.917647, 0.231373, 1)
theme_override_fonts/font = ExtResource("2_uo0s0")
theme_override_font_sizes/font_size = 45
text = "1"
horizontal_alignment = 1
vertical_alignment = 2

[node name="LivesLabel" type="Label" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -131.0
offset_top = 52.0
offset_right = -1.0
offset_bottom = 83.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("3_528dp")
theme_override_font_sizes/font_size = 23
text = "Elud
"
horizontal_alignment = 1

[node name="Ver" type="Label" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -52.0
offset_top = -23.0
grow_horizontal = 0
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_528dp")
theme_override_font_sizes/font_size = 10
text = "ver 0.14"
horizontal_alignment = 1
vertical_alignment = 2

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_message_timer_timeout"]
